--- a/class-practice/my-app/package.json
+++ b/class-practice/my-app/package.json
@@ -17,6 +17,7 @@
     "@portone/browser-sdk": "^0.1.0",
     "antd": "^5.24.5",
     "apollo-upload-client": "^18.0.1",
+    "dompurify": "^3.2.6",
     "firebase": "^11.6.1",
     "graphql": "^16.10.0",
     "graphql-request": "^7.2.0",
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.5",
     "@types/apollo-upload-client": "^18.0.0",
+    "@types/dompurify": "^3.2.0",
     "@types/lodash": "^4.17.17",
     "@types/node": "^20",
     "@types/react": "^18",
